--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^4.0.9",
+    "@mantine/form": "^4.0.9",
+    "@mantine/hooks": "^4.0.9",
+    "@mantine/modals": "^4.0.9",
+    "@mantine/next": "^4.0.9",
+    "@mantine/notifications": "^4.0.9",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -19,6 +25,8 @@
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.6.1",
     "typescript": "4.6.3"
   }
 }
