--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mantine/modals": "^4.0.9",
     "@mantine/next": "^4.0.9",
     "@mantine/notifications": "^4.0.9",
+    "@prisma/client": "^3.11.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@iconify/react": "^3.2.0",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
@@ -27,6 +29,7 @@
     "eslint-config-next": "12.1.1",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.6.1",
+    "prisma": "^3.11.1",
     "typescript": "4.6.3"
   }
 }
