--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-	"extends": ["next/core-web-vitals", "prettier"]
+	"extends": ["next/core-web-vitals", "prettier"],
+	"rules": {
+		"react/display-name": "off",
+		"react-hooks/exhaustive-deps": "off"
+	}
 }
