--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@artsy/fresnel": "^3.4.1",
     "@hookform/resolvers": "^2.8.8",
     "@mantine/core": "^4.1.2",
     "@mantine/dates": "^4.1.2",
@@ -19,8 +20,11 @@
     "@mantine/notifications": "^4.1.2",
     "@prisma/client": "^3.11.1",
     "axios": "^0.26.1",
+    "bcryptjs": "^2.4.3",
     "browser-or-node": "^2.0.0",
     "dayjs": "^1.11.0",
+    "immer": "^9.0.12",
+    "jotai": "^1.6.3",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -32,6 +36,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^3.2.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
