--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "immer": "^9.0.12",
     "jotai": "^1.6.3",
     "next": "12.1.1",
+    "nextjs-progressbar": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
