--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.29.0",
+    "react-share": "^4.4.0",
     "sass": "^1.49.11",
     "short-unique-id": "^4.4.4",
     "zod": "^3.14.3"
