feat: google adsense

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ RECAPTCHA_SECRET_KEY=
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
 NEXT_PUBLIC_UMAMI_ID=
 NEXT_PUBLIC_UMAMI_URL=
+NEXT_PUBLIC_GOOGLE_ADSENSE_URL=
